feat: 添加 symbol.h 和 symbol.cpp，构建符号表模块

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -6,5 +6,7 @@ set(CMAKE_CXX_STANDARD 20)
 add_executable(code main.cpp
         lexer.h
         parser.h
+        symbol.cpp
+        symbol.h
 )
 target_compile_options(code PRIVATE -Wall)
