feat: 修改 README，更正部分 assert

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -2,8 +2,9 @@ cmake_minimum_required(VERSION 3.0)
 project(code)
 
 set(CMAKE_CXX_STANDARD 20)
+#set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+set(CMAKE_EXE_LINKER_FLAGS "-static -static-libgcc -static-libstdc++")
 
-add_executable(fmt_guide main.cpp)
 
 add_executable(code main.cpp
         lexer.h
